<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.admin.AdminEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_arrow_back_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/edit_tour_vie"
                android:textAlignment="center"
                android:textColor="@color/darkBlue"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:ignore="Autofill,TextFields"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/picTour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        tools:srcCompat="@tools:sample/backgrounds/scenic"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/editCategoryId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category_vie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView"
                    tools:ignore="Autofill,TextFields,UnusedAttribute" />

                <EditText
                    android:id="@+id/editTitleTour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_vie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editCategoryId"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/editAddressTour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_vie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTitleTour"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/editBedNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hotel_quality_vie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editAddressTour"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/editDateTour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/departure_date_vie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editBedNum"
                    tools:ignore="Autofill,TextFields"/>

                <EditText
                    android:id="@+id/editTimeTour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/departure_date_vie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editDateTour"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/editDescriptionTour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_vie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTimeTour"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/editDurationTour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tour_duration_vie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editDescriptionTour"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/editDistanceTour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/distance_vie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editDurationTour"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/editPriceTour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price_vie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editDistanceTour"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/editScoreTour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rating_vie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editPriceTour"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/editTourGuideName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/guide_name_vie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="Autofill,TextFields"
                    app:layout_constraintTop_toBottomOf="@+id/editScoreTour" />

                <EditText
                    android:id="@+id/editTourGuidePhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/guide_phone_vie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTourGuideName"
                    tools:ignore="Autofill,TextFields" />

                <!-- Thêm LinearLayout chứa CheckBox -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTourGuidePhone">

                    <CheckBox
                        android:id="@+id/recommendCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="16dp"
                        android:text="@string/recommend_vie" />

                    <CheckBox
                        android:id="@+id/popularCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="16dp"
                        android:text="@string/popular_vie" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/confirm_vie"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
